# speech-to-pdf

./: .gitignore  DEPLOYMENT.md  README.md  vercel.json
backend/: .env.example  .gitignore  Dockerfile  admin_override_test.md  fly.toml  init_db.py  migrate_to_postgres.py  password_change_demo.md  pyproject.toml  requirements.txt  test_language_detection.py  test_password_change.py  test_password_validation.py  test_rate_limit.py
backend/app/: auth.py  config.py  converter.py  database.py  main.py  models.py  rate_limiter.py  schemas.py
backend/app/routers/: admin.py  auth.py  conversions.py
frontend/: .env.production
frontend/src/components/: ConversionList.tsx  FileUpload.tsx  Layout.tsx  PasswordChangeModal.tsx
frontend/src/pages/: _app.tsx  admin.tsx  index.tsx  login.tsx
